--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ Flask==3.0.3
 Flask-CORS==5.0.0
 Authlib==1.3.2
 psycopg2-binary==2.9.10
+gunicorn==23.0.0
 bcrypt==4.2.1
 PyJWT==2.10.1
 python-dotenv==1.0.1
