--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ statsmodels==0.14.4
 Flask==3.0.3
 Flask-CORS==5.0.0
 Authlib==1.3.2
-equests==2.32.3
+requests==2.32.3
 psycopg2-binary==2.9.10
 gunicorn==23.0.0
 bcrypt==4.2.1
